welcome.lessons.welcome.variables.Variables.scala.error
Variables:14: error: type mismatch;
 found   : Unit
 required: Boolean
while (nbPas=0)
            ^Variables:20: error: type mismatch;
 found   : Unit
 required: Boolean
if (nbPas=0)
         ^